# gallatin

./: CMakeLists.txt  LICENSE  README.md  bitarr.batch  modules.sh  ncu.batch  ncu_commands.txt  profiling.txt  sort.batch  template_timing.batch
cmake/: ConfigureExecutable.cmake  EvalGpuArchs.cmake
include/gallatin/allocators/: alloc_utils.cuh  block.cuh  defunct_beta_pointer.cuh  defunct_block_storage.cuh  defunct_slab_one_size.cuh  gallatin.cuh  global_allocator.cuh  memory_table.cuh  murmurhash.cuh  shared_block_storage.cuh  timer.cuh  veb.cuh
include/gallatin/data_structs/: block_queue.cuh  bulk_coop_ext_ht.cuh  callocable.cuh  callocable_ht.cuh  callocable_ht_reduced.cuh  chaining_table.cuh  consistent_ht.cuh  coop_chaining_table.cuh  coop_ext_ht.cuh  custring.cuh  dash_ht.cuh  dev_host_queue.cuh  ds_utils.cuh  expandable.cuh  ext_full_growing.cuh  extendible_ht.cuh  fixed_vector.cuh  formattable.cuh  formattable_atomics_recursive.cuh  formattable_recursive.cuh  formattable_recursive_v2.cuh  formattable_v2.cuh  full_init_ext_ht.cuh  functor.cuh  hash_table.cuh  log.cuh  quad_table_atomic.cuh  quad_table_reduced.cuh  queue.cuh  ring_queue.cuh  single_vector.cuh  smid_ring_queue.cuh  tcf.cuh  vector.cuh  visualizer.cuh
include/gallatin/old_allocators/: alloc_memory_table.cuh  betta.cuh  block_storage.cuh  const_heap_pointer.cuh  cycle_counting.cuh  ext_veb_nosize.cuh  extending_veb.cuh  free_list.cuh  mem_pool.cuh  one_size_allocator.cuh  reporter.cuh  simple_merged_allocator.cuh  stack_of_stacks.cuh  templated_bitbuddy.cuh
include/poggers/: hashutil.cuh  ht_helpers.cuh  metadata.cuh  pair_iterative_iceberg.cuh
include/poggers/ML/: layer.cuh  neuron.cuh  templated_vector.cuh
include/poggers/allocators/: aligned_stack.cuh  alloc_memory_table.cuh  alloc_utils.cuh  betta.cuh  bitarray.cuh  bitbuddy.cuh  block_storage.cuh  block_table.cuh  buddy_allocator.cuh  cms.cuh  const_heap_pointer.cuh  cycle_counting.cuh  dead_list_sub_allocator.cuh  extending_veb.cuh  four_bit_bitarray.cuh  four_bit_bitbuddy.cuh  free_list.cuh  global_heap_ptr.cuh  malloc_bitarr.cuh  mem_pool.cuh  offset_slab.cuh  one_size_allocator.cuh  reporter.cuh  simple_merged_allocator.cuh  slab.cuh  slab_one_size.cuh  stack_of_stacks.cuh  sub_allocator.cuh  sub_veb.cuh  superblock.cuh  swap_space.cuh  templated_bitbuddy.cuh  uint64_bitarray.cuh  veb.cuh  veb_old.cuh
include/poggers/beta/: alloc_with_locks.cuh  allocator_context.cuh  beta.cuh  beta_pointer.cuh  block.cuh  block_storage.cuh  extending_veb.cuh  memory_table.cuh  one_size_allocator.cuh  segment_tree.cuh  shared_block_storage.cuh  slab_one_size.cuh  thread_allocator.cuh  thread_storage.cuh  timer.cuh  veb.cuh  warp_lock.cuh
include/poggers/counter_blocks/: alloc_with_locks.cuh  allocator_context.cuh  beta.cuh  block.cuh  block_storage.cuh  extending_veb.cuh  memory_table.cuh  mixed_counter.cuh  one_size_allocator.cuh  segment_table.cuh  shared_block_slab_allocator.cuh  shared_block_storage.cuh  slab_one_size.cuh  swap_space.cuh  thread_allocator.cuh  thread_storage.cuh  timer.cuh  veb.cuh  warp_lock.cuh
include/poggers/data_structs/: log.cuh  uint64_hash_table.cuh
include/poggers/experimental/: rank_select_compress.cuh  templated_funcs.cuh
include/poggers/hash_schemes/: murmurhash.cuh  simHash.cuh
include/poggers/insert_schemes/: bucket_insert.cuh  dummy_scheme.cuh  grouped_power_buckets.cuh  linear_insert_buckets.cuh  power_of_n.cuh  power_of_n_shortcut.cuh  power_of_n_shortcut_buckets.cuh  power_of_n_shortcut_key_replace.cuh  power_of_two.cuh  single_slot_insert.cuh
include/poggers/probing_schemes/: dependent_hash.cuh  double_hashing.cuh  linear_probing.cuh  power_of_two.cuh  xor_power_of_two.cuh
include/poggers/representations/: 12_bit_bucket.cuh  backing_allocator.cuh  dynamic_container.cuh  grouped_key_val_pair.cuh  grouped_storage_sub_bits.cuh  key_accumulator.cuh  key_only.cuh  key_val_pair.cuh  packed_bucket.cuh  representation_helpers.cuh  shortened_key_val_pair.cuh  skiplist_nodes.cuh  soa.cuh
include/poggers/sizing/: default_sizing.cuh  variadic_sizing.cuh
include/poggers/tables/: base_table.cuh  bucketed_table.cuh  (+1 more)
tests/: CMakeLists.txt
tests/src/: aligned_stack_tests.cu  allocator_tests.cu  bandwidth_test.cu  beta_block_tests.cu  beta_large_allocs.cu  beta_mixed_frag.cu  beta_slab_one_size_tests.cu  beta_slab_one_tests.cu  beta_tests.cu  beta_veb_tests.cu  betta_tests.cu  bitarr_benchmark.cu  bitarr_comp_verify.cu  block_queue_test.cu  block_tests.cu  bucket_speed_tests.cu  buddy_allocator_tests.cu  bulk_ht_test.cu  calloc_multiple.cu  callocable_random_test.cu  callocable_test.cu  chaining_test.cu  cms_benchmarks.cu  cms_fill_benchmarks.cu  cms_init_tests.cu  cms_variation_benchmarks.cu  coop_chaining_test.cu  coop_ext_ht_test.cu  counter_block_beta_tests.cu  counter_block_tests.cu  counter_slab_one_tests.cu  delete_tests.cu  even_fill_ht_test.cu  extendible_ht_test.cu  formattable_test.cu  four_bitbuddy_tests.cu  free_list_tests.cu  full_ext_ht_test.cu  gallatin_churn.cu  gallatin_host_test.cu  (+47 more)
(+2 files in other folders)
